springjava/k8s/Imm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immovables-serverside-deployment
  namespace: ns-immovables-spring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: immovables-serverside
  template:
    metadata:
      labels:
        app: immovables-serverside
    spec:
      containers:
        - name: immovables-serverside
          image: och5351/springtest:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: och2
