springjava/k8s/Imm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immovables-serverside-svc
  labels:
    app: immovables-serverside-svc
  namespace: ns-immovables-spring
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: immovables-serverside
  type: NodePort
