springjava/k8s/Imm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immovables-serverside-ingress
  namespace: ns-immovables-spring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    - host: opyter.iptime.org
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: immovables-serverside-svc
                port:
                  number: 80
